fix typo and regenerate swagger yaml
