# backend/docs/swagger.json
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/v1/subscription": {
+        "/v1/subscriptions": {
             "get": {
                 "produces": [
                     "application/json"
@@ -88,7 +88,7 @@
                 }
             }
         },
-        "/v1/subscription/{subscriptionId}": {
+        "/v1/subscriptions/{subscriptionId}": {
             "get": {
                 "produces": [
                     "application/json"
